--- a/nevsorok/1.html
+++ b/nevsorok/1.html
@@ -10,7 +10,7 @@
 <td align=center width=50%><a href="13.html"><img src="alkalmazottak.gif" border=0></a></td>
 </tr>
 <tr>
-<td align=center width=50%><a href="12.html"><img src="levelezõ.gif" border=0></a></td>
+<td align=center width=50%><a href="12.html"><img src="levelezo.gif" border=0></a></td>
 <td align=center width=50%><a href="14.html"><img src="osztv.gif" border=0></a></td>
 </tr>
 </table>
